--- a/app/design/frontend/pc/default/template/catalog/product/view/options.phtml
+++ b/app/design/frontend/pc/default/template/catalog/product/view/options.phtml
@@ -331,7 +331,7 @@
                 jQuery(".insert_US").remove();
             }
             var template = '<div class="insert_US">';
-                template += '<p class="infomation">Ddaydress of size <i class="num nomalnum"> '+us_value+' </i> will be made according to the</p>';
+                template += '<p class="infomation">Islambridal of size <i class="num nomalnum"> '+us_value+' </i> will be made according to the</p>';
                 template += '<ul class="compare">';
                 jQuery.each(us_obj,function(n,value){
                     template += '<li>';
