--- a/app/design/frontend/pc/default/template/helpcenter/color-chart.phtml
+++ b/app/design/frontend/pc/default/template/helpcenter/color-chart.phtml
@@ -1,7 +1,7 @@
 <div class="help_right">
-    <p style="MARGIN-BOTTOM: 0px; border-top: none;" class="dressp">
-        Color chart for all dresses at D-aydress.com    </p>
-    <p class="wedp">
+    <p><span style="font-size: medium;"><strong>Color Chart</strong></span></p>
+    <p style="MARGIN-BOTTOM: 0px; border-top: none;font-size:15px;" class="dressp">Color chart for all dresses at www.islambridal.com</p>
+    <p class="wedp" style="font-size:13px;">
         Considering the difference of lighting and the display of monitor, the color you see from computer may be kind of different from that of the item you received. The actual color should be the color of item you received.
     </p>
     <div id="P_color">
