--- a/app/design/frontend/pc/default/template/helpcenter/customs-and-import-tax.phtml
+++ b/app/design/frontend/pc/default/template/helpcenter/customs-and-import-tax.phtml
@@ -1,4 +1,6 @@
 <div class="help_right"><p><span style="font-size: medium;"><strong>Customs and Import Tax</strong></span></p>
     <p>Customs is a government agency responsible for regulating shipments entering a country or region. All shipments being sent to and from a country or region must clear customs first. It's always buyer's responsibilities to clear customs and pay the relevant custom duties. Sometimes goods under a certain value, or in certain categories, do not incur taxes.</p>
     <p>If you have to pay import taxes and/or additional duties and sales taxes, then you would have to pay that to the courier upon receipt of the package(s). We can't calculate this for you or you cannot pre-pay it. If you are drop-shipping or sending a gift item to someone, please make sure they are aware of the possibility of having to pay taxes when receiving the goods.</p>
-    <p>we cannot, and will not offer advice about taxes in your country. As the buyer, it is your responsibility to find out search some information about your local customs. If there is any way which could help to avoid the fee, we are more than willing to help.</p></div>
+    <p>we cannot, and will not offer advice about taxes in your country. As the buyer, it is your responsibility to find out search some information about your local customs. If there is any way which could help to avoid the fee, we are more than willing to help.</p>
+
+</div>
