--- a/app/design/frontend/pc/default/template/helpcenter/left.phtml
+++ b/app/design/frontend/pc/default/template/helpcenter/left.phtml
@@ -1,8 +1,11 @@
 <dl>
     <dt>CUSTOMER GUIDANCE</dt>
+    <dd><a rel="nofollow" href="<?php echo $this->getUrl('about-us')?>">About Us</a></dd>
     <dd><a rel="nofollow" href="<?php echo $this->getUrl('login-problems')?>">Login Problems</a></dd>
+    <dd><a rel="nofollow" href="<?php echo $this->getUrl('how-to-order')?>">How To Order</a></dd>
     <dd><a rel="nofollow" href="<?php echo $this->getUrl('trace-your-order')?>">Trace Your Order</a></dd>
     <dd><a rel="nofollow" href="<?php echo $this->getUrl('payment-methods')?>">Payment Methods</a></dd>
+    <dd><a rel="nofollow" href="<?php echo $this->getUrl('how-to-wear-hijab')?>">How To Wear Hijab</a></dd>
 </dl>
 <dl>
     <dt>PRODUCT INFO</dt>
