--- a/app/design/frontend/pc/default/template/helpcenter/login-problems.phtml
+++ b/app/design/frontend/pc/default/template/helpcenter/login-problems.phtml
@@ -1,3 +1,14 @@
 <div class="help_right"><p><span style="font-size: medium;"><strong>Login Problems</strong></span></p>
-    <p>If you have trouble to log in</p>
-    <p>Please follow the instructions below:<br> You can check whether your username is correct which you used for registration or not.<br> You need ensure that cookies from&nbsp;our website&nbsp;is accepted in your browser (Internet Explorer or others).<br> If the above methods still do not work, please contact our customer service, they will help you to resolve the problem.<br> TIPs: If you're not sure whether the problem is&nbsp;ours or yours, please test logging in with a different set of computer, or try different browsers.<br> When you registered, you made a mistake which caused that you can't access your account, and you've never made any orders. You’d better to registrant for a new account.</p></div>
+
+    <p>Sign up Steps:</p>
+    <p>Click “Join Free” on website right place.</p>
+    <p>Input Email, Password, and click Register button. Then, you will receive a sign up confirmation message.</p>
+    <p>Login Problems:</p>
+    <p>If you have troubles to log in, Please follow the instructions below:</p>
+    <p>You can check whether your user-name is correct which you used for registration or not.</p>
+    <p>You need ensure that cookies from our website is accepted in your browser (Internet Explorer or others).</p>
+    <p>If the above methods still do not work, please contact our customer service, they will help you to resolve the problem.</p>
+    <p>TIPs: If you're not sure whether the problem is ours or yours, please test logging in with a different set of computer, or try different browsers.</p>
+    <p>When you registered, you made a mistake which caused that you can't access your account, and you've never made any orders. You’d better to registrant for a new account.</p>
+
+</div>
