--- a/app/design/frontend/pc/default/template/helpcenter/main.phtml
+++ b/app/design/frontend/pc/default/template/helpcenter/main.phtml
@@ -15,7 +15,7 @@
         <?php echo $this->getChildHtml('help_left');?>
         <script>
             var pathname =  window.location.pathname;
-            jQuery("a[href*='"+pathname+"']").css("color","#f39");
+            jQuery("a[href*='"+pathname+"']").css("color","#ab7505");
         </script>
     </div>
 
