--- a/app/design/frontend/pc/default/template/helpcenter/measurement.phtml
+++ b/app/design/frontend/pc/default/template/helpcenter/measurement.phtml
@@ -1,30 +1,86 @@
 <div class="help_right">
-    <div id="Measure" class="mainbox"><dl class="Measure" style="margin-left: 200px;"><dd>
+    <div id="Measure" class="mainbox">
+        <dl class="Measure" style="margin-left: 25px;">
+            <dd>
                 <h3>Measurement Guide</h3>
-                <dl class="meatab"><dt></dt><dd class="co_main co_wedding">
-                        <div class="posidiv bust"><span class="bwhh">Bust</span>Measure across the back and fullest part of the bust (not under the bust).</div>
-                        <div class="posidiv waist"><span class="bwhh">Waist</span>Bend to one side to find the crease or natural waist. Measure across the narrowest part.</div>
-                        <div class="posidiv hips"><span class="bwhh">Hips</span>Standing with feet together, measure at the fullest part of the hips.</div>
-                        <div class="posidiv hollow"><span class="bwhh">Hollow to Floor</span>Measure from the center of the collarbone (Hollow) to the floor.<br>Note: Stand straight with feet together, and measure in bare feet.</div>
+                <dl class="meatab">
+                    <dt></dt>
+                    <dd class="co_main co_wedding">
+                        <div class="posidiv bust">
+                            <span class="bwhh">Bust</span>Measure across the back and fullest part of the bust (not under the bust).
+                        </div>
+                        <div class="posidiv waist">
+                            <span class="bwhh">Waist</span>Bend to one side to find the crease or natural waist. Measure across the narrowest part.
+                        </div>
+                        <div class="posidiv hips">
+                            <span class="bwhh">Hips</span>Standing with feet together, measure at the fullest part of the hips.
+                        </div>
+                        <div class="posidiv hollow">
+                            <span class="bwhh">Hollow to Floor</span>Measure from the center of the collarbone (Hollow) to the floor.<br>
+                            Note: Stand straight with feet together, and measure in bare feet.
+                        </div>
                     </dd><dd class="co_main co_wedding_back">
-                        <div class="posidiv bwshould"><span class="bwhh">Shoulder</span>Shoulder - From the edge of the shoulder socket, measure across the back to the same point on the other shoulder.</div>
-                        <div class="posidiv bwarm"><span class="bwhh">Arm Eye</span>Measure from the top of the shoulder, wrap the measuring tape under the arm pit, and up the back of the shoulder.</div>
-                        <div class="posidiv bwarmleng"><span class="bwhh">Armlength</span>Measure from your shoulder point to the wrist.</div>
-                    </dd></dl>
+                        <div class="posidiv bwshould">
+                            <span class="bwhh">Shoulder</span>Shoulder - From the edge of the shoulder socket, measure across the back to the same point on the other shoulder.
+                        </div>
+                        <div class="posidiv bwarm">
+                            <span class="bwhh">Arm Eye</span>Measure from the top of the shoulder, wrap the measuring tape under the arm pit, and up the back of the shoulder.
+                        </div>
+                        <div class="posidiv bwarmleng">
+                            <span class="bwhh">Armlength</span>Measure from your shoulder point to the wrist.
+                        </div>
+                    </dd>
+                </dl>
                 <h3>Measurement Standards</h3>
-                <dl><dt></dt><dd>
-                        <p>We strongly suggest you have your measurements taken first by a professional tailor or your friends by following the measure guide.Please do not measure over clothing except undergrments,which you will wear with this dress.According to the different dress style,approx.8cm-13cm (3.15inch-5.12inch) additional length will be reserved for making a good fit dress for you.</p>
-                    </dd></dl></dd></dl></div>
+                <dl>
+                    <dt></dt>
+                    <dd>
+                        <p>
+                            We strongly suggest you have your measurements taken first by a professional tailor or your friends by following the measure guide.Please do not measure over clothing except undergrments,which you will wear with this dress.According to the different dress style,approx.8cm-13cm (3.15inch-5.12inch) additional length will be reserved for making a good fit dress for you.
+                        </p>
+                    </dd>
+                </dl>
+            </dd>
+        </dl>
+    </div>
     <div id="zzjs_nav5" class="Measuring">
-        <div class="qh_tit" style="padding-top: 0px; border-top-style: none;">Measurement Guide</div>
-        <p class="pm" style="padding-left: 2px; margin-left: 30px;">How to measure</p>
-        <dl class="sdl sdl1" style="width: 150px; margin-right: 45px;"><dt><img style="float: none;" title="" alt="" src="http://www.ddaydress.com/skin/frontend/pc/default/images/commont/w_jacket_m1.jpg" height="212" width="135"></dt><dd><b>Bust</b>
-                <p style="padding-top: 0px; padding-left: 0px;">Not your bra size! Take the tape around your back and bring it across the fullest part of your bust.</p>
-            </dd></dl><dl class="sdl" style="width: 150px; margin-right: 45px;"><dt><img style="float: none;" title="" alt="" src="http://www.ddaydress.com/skin/frontend/pc/default/images/commont/w_jacket_m2.jpg" height="212" width="134"></dt><dd><b>Shoulder</b>
-                <p style="padding-top: 0px; padding-left: 0px;">From the edge of the shoulder socket, measure across the back to the same point on the other shoulder.</p>
-            </dd></dl><dl class="sdl" style="width: 150px; margin-right: 45px;"><dt><img style="float: none;" title="" alt="" src="http://www.ddaydress.com/skin/frontend/pc/default/images/commont/w_jacket_m3.jpg" height="212" width="134"></dt><dd><b>Arm Length</b>
-                <p style="padding-top: 0px; padding-left: 0px;">Measure from your shoulder point to the wrist.</p>
-            </dd></dl><dl class="sdl" style="width: 150px; margin-right: 45px;"><dt><img style="float: none;" title="" alt="" src="http://www.ddaydress.com/skin/frontend/pc/default/images/commont/w_jacket_m4.jpg" height="212" width="135"></dt><dd><b>Armscye</b>
-                <p style="padding-top: 0px; padding-left: 0px;">Measure from the top of the shoulder, down the front of the shoulder, under the arm pit, and up the back of the shoulder.</p>
-            </dd></dl></div>
+        <div class="qh_tit" style="padding-top: 0px; border-top-style: none;">
+            Measurement Guide
+        </div>
+        <p class="pm" style="padding-left: 2px; margin-left: 30px;">
+            How to measure
+        </p>
+        <dl class="sdl sdl1" style="width: 150px; margin-right: 45px;">
+            <dt><img style="float: none;" title="" alt="" src="http://www.islambridal.com/skin/frontend/pc/default/images/commont/w_jacket_m1.jpg" height="212" width="135"></dt>
+            <dd><b>Bust</b>
+                <p style="padding-top: 0px; padding-left: 0px;">
+                    Not your bra size! Take the tape around your back and bring it across the fullest part of your bust.
+                </p>
+            </dd>
+        </dl>
+        <dl class="sdl" style="width: 150px; margin-right: 45px;">
+            <dt><img style="float: none;" title="" alt="" src="http://www.islambridal.com/skin/frontend/pc/default/images/commont/w_jacket_m2.jpg" height="212" width="134"></dt>
+            <dd><b>Shoulder</b>
+                <p style="padding-top: 0px; padding-left: 0px;">
+                    From the edge of the shoulder socket, measure across the back to the same point on the other shoulder.
+                </p>
+            </dd>
+        </dl>
+        <dl class="sdl" style="width: 150px; margin-right: 45px;">
+            <dt><img style="float: none;" title="" alt="" src="http://www.islambridal.com/skin/frontend/pc/default/images/commont/w_jacket_m3.jpg" height="212" width="134"></dt>
+            <dd><b>Arm Length</b>
+                <p style="padding-top: 0px; padding-left: 0px;">
+                    Measure from your shoulder point to the wrist.
+                </p>
+            </dd>
+        </dl>
+        <dl class="sdl" style="width: 150px; margin-right: 45px;">
+            <dt><img style="float: none;" title="" alt="" src="http://www.islambridal.com/skin/frontend/pc/default/images/commont/w_jacket_m4.jpg" height="212" width="135"></dt>
+            <dd><b>Armscye</b>
+                <p style="padding-top: 0px; padding-left: 0px;">
+                    Measure from the top of the shoulder, down the front of the shoulder, under the arm pit, and up the back of the shoulder.
+                </p>
+            </dd>
+        </dl>
+    </div>
 </div>
