--- a/app/design/frontend/pc/default/template/helpcenter/payment-methods.phtml
+++ b/app/design/frontend/pc/default/template/helpcenter/payment-methods.phtml
@@ -1,10 +1,13 @@
-<div class="help_right">
-<p>
-<span style="font-size: medium;"><strong>Payment Methods</strong></span></p>
-<p>We&nbsp;accept&nbsp;the&nbsp;following&nbsp;methods&nbsp;of&nbsp;payment:</p>
-<p>---Credit&nbsp;card, Debit card, Paypal Transfer</p>
-<p>How&nbsp;to&nbsp;Use&nbsp;Your&nbsp;Credit&nbsp;Card?</p>
-<p>After&nbsp;adding&nbsp;the&nbsp;item&nbsp;into&nbsp;the&nbsp;shopping&nbsp;cart,&nbsp;click&nbsp;"Proceed&nbsp;to&nbsp;Pay"&nbsp;and&nbsp;then&nbsp;you&nbsp;will&nbsp;be&nbsp;redirected&nbsp;to&nbsp;the&nbsp;Credit&nbsp;Card&nbsp;Payment page&nbsp;after&nbsp;your&nbsp;order&nbsp;is&nbsp;submitted&nbsp;successfully, then&nbsp;please&nbsp;fill&nbsp;in&nbsp;the&nbsp;required&nbsp;information&nbsp;carefully&nbsp;.&nbsp;</p>
-<p>Note:</p>
-<p>1. Both&nbsp;of&nbsp;the&nbsp;credit&nbsp;card&nbsp;and&nbsp;debit&nbsp;card&nbsp;share&nbsp;the&nbsp;common&nbsp;payment&nbsp;page&nbsp;which&nbsp;is&nbsp;the&nbsp;Credit&nbsp;Card&nbsp;Payment&nbsp;page&nbsp;you&nbsp;are&nbsp;brought&nbsp;to.</p>
-<p>2. We do&nbsp;not&nbsp;store&nbsp;or&nbsp;review&nbsp;your&nbsp;credit&nbsp;card&nbsp;&amp;&nbsp;personal&nbsp;information.&nbsp;We&nbsp;can&nbsp;not&nbsp;accept&nbsp;any&nbsp;responsibility&nbsp;for any&nbsp;credit&nbsp;card&nbsp;payment&nbsp;issues.</p></div>
+<div class="help_right"><p><span style="font-size: medium;"><strong>Payment Methods</strong></span></p>
+
+
+    <p>We accept the following methods of payment:</p>
+    <p>---Credit card, Debit card, Paypal Transfer</p>
+    <p>How to Use Your Credit Card?</p>
+    <p>After adding the item into the shopping cart, click "Proceed to Pay" and then you will be redirected to the Credit Card Payment page after your order is submitted successfully, then please fill in the required information carefully . </p>
+    <p>Note:</p>
+    <p>1. Both of the credit card and debit card share the common payment page which is the Credit Card Payment page you are brought to.</p>
+    <p>2. We do not store or review your credit card & personal information. We can not accept any responsibility for any credit card payment issues.</p>
+
+
+</div>
