--- a/app/design/frontend/pc/default/template/helpcenter/processing-shipping-time.phtml
+++ b/app/design/frontend/pc/default/template/helpcenter/processing-shipping-time.phtml
@@ -1,5 +1,6 @@
 <div class="help_right"><p><span style="font-size: medium;"><strong>Processing &amp; Shipping Time</strong></span></p>
-    <p>The&nbsp;item's&nbsp;Tailoring/processing&nbsp;time&nbsp;is&nbsp;a&nbsp;maximum&nbsp;15&nbsp;days&nbsp;from&nbsp;the&nbsp;date&nbsp;of&nbsp;order&nbsp;placement except the peaking season.&nbsp;</p>
+    <p>The maximum Tailoring/processing time for a dress is 15 days from the date of order placement except the peaking season. </p>
     <p>Tailoring period is about 10-15 calendar days and shipping time is about 2-8 calendar days.</p>
-    <p>The&nbsp;processing&nbsp;time&nbsp;varies&nbsp;across&nbsp;the&nbsp;items.&nbsp;DHL&nbsp;delivers&nbsp;faster&nbsp;than&nbsp;EMS.&nbsp;Shipping&nbsp;delays also&nbsp;might&nbsp;be&nbsp;caused&nbsp;by&nbsp;unavoidable&nbsp;reasons&nbsp;like&nbsp;strikes,&nbsp;bad&nbsp;weather,&nbsp;etc.&nbsp;</p>
-    <p>We&nbsp;ensure&nbsp;that&nbsp;the&nbsp;products&nbsp;are&nbsp;shipped&nbsp;at&nbsp;the&nbsp;earliest&nbsp;possible&nbsp;time.&nbsp;Our&nbsp;primary&nbsp;shipping&nbsp;methods&nbsp;include&nbsp;the&nbsp;standard&nbsp;and&nbsp;expedited&nbsp;shipping, which you can refer to the page of “delivery method”.</p></div>
+    <p>The processing time varies across the items and delivery address. Shipping delays also might be caused by unavoidable reasons like strikes, bad weather, etc. </p>
+    <p>We ensure that the products are shipped at the earliest possible time. Our primary shipping methods include the standard and expedited shipping, which you can refer to the page of “delivery method”. PS: DHL delivers faster than EMS.</p>
+</div>
