--- a/app/design/frontend/pc/default/template/helpcenter/shipping-methods.phtml
+++ b/app/design/frontend/pc/default/template/helpcenter/shipping-methods.phtml
@@ -1,7 +1,10 @@
 <div class="help_right"><p><span style="font-size: medium;"><strong>Shipping Methods</strong></span></p>
+
     <p>Standard shipping</p>
     <p>Standard shipping delivery time is between 4 - 8 days to all major destinations, standard shipping costs less but takes a bit longer than expedited shipping.</p>
-    <p>&nbsp;</p>
+
     <p>Expedited shipping</p>
     <p>Expedited shipping delivery time is between 3 - 7 days to all major destinations, the fastest shipping method worldwide.</p>
-    <p>Note: The above delivery estimates do not include order processing time. Different items may have different shipping costs. When you click "proceed to pay", you will see the shipping cost.</p></div>
+    <p>Note: The above delivery estimates do not include order processing time. Different items may have different shipping costs. When you click "proceed to pay", you will know the shipping cost directly.</p>
+
+</div>
