--- a/app/design/frontend/pc/default/template/helpcenter/trace-your-order.phtml
+++ b/app/design/frontend/pc/default/template/helpcenter/trace-your-order.phtml
@@ -1,4 +1,5 @@
 <div class="help_right"><p><span style="font-size: large;"><strong>Trace Your Order</strong></span></p>
     <p>Dear customer,</p>
-    <p>As for the order status and shipping information of your package, you can click "My Account" in our website where you can view all the detailed information about your order. If you have received the package, please remember to confirm it and sign for it.</p>
-    <p><?php echo $this->getUrl()?>sales/order/history/</p></div>
+    <p>As for the order status and shipping information of your package, you can click "My Account" in our website Islambridal.com where you can view all the detailed information about your order status. If you have received the package, please remember to confirm it and sign for it.</p>
+    <p>If you like it, please leave positive feedback below the item.</p>
+</div>
