--- a/app/design/frontend/pc/default/template/page/home/review.phtml
+++ b/app/design/frontend/pc/default/template/page/home/review.phtml
@@ -23,7 +23,7 @@
     $_items =  $_reviewsCollection->getItems();
 ?>
 <div class="home_review_title">
-    <div class="h1"><strong>D-daydress's Customers Show</strong></div>
+    <div class="h1"><strong>Islambridal's Customers Show</strong></div>
     <div class="h4">*Share your look to get $15 discount!</div>
 </div>
 <div class="MT10 home_review owl-carousel">
