--- a/skin/frontend/pc/default/scss/_blog.scss
+++ b/skin/frontend/pc/default/scss/_blog.scss
@@ -6,7 +6,7 @@
     .postTitle h2{margin:0;padding:0;font-weight:400;font-size:20px;
         a{
           &:hover{
-            color:#f39;
+            color:#ab7505;
           }
         }
     }
