--- a/skin/frontend/pc/default/scss/_one_step_checkout.scss
+++ b/skin/frontend/pc/default/scss/_one_step_checkout.scss
@@ -11,7 +11,7 @@ div.clear { height:10px}
 div.c { clear:both; width:100%; height:0px}
 
 /*---easycheout background color---*/
-.easycheout_bg { background: #f39;color:#fff;}
+.easycheout_bg { background: #ab7505;color:#fff;}
 
 .easycheout_headings {
     width: 100%;
@@ -26,7 +26,7 @@ div.c { clear:both; width:100%; height:0px}
 
 .easycheout_main_header h2 { float:left; width:100%;  font:18px/28px Tahoma normal; color:#434343; padding:5px 0 16px;}
 
-.easycheout_main_header a  { font:13px/20px Tahoma normal; text-decoration:underline; color:#f39; clear:both; margin-bottom:10px; *white-space:nowrap; *padding-bottom:10px;}
+.easycheout_main_header a  { font:13px/20px Tahoma normal; text-decoration:underline; color:#ab7505; clear:both; margin-bottom:10px; *white-space:nowrap; *padding-bottom:10px;}
 
 .easycheout_main_header a:hover { color:#666; text-decoration:none}
 
