--- a/skin/frontend/pc/default/scss/_shopping_bag.scss
+++ b/skin/frontend/pc/default/scss/_shopping_bag.scss
@@ -46,7 +46,7 @@
                     color: #000000;
                     font-weight: normal;
                     &:hover {
-                        color: #f39;
+                        color: #ab7505;
                     }
                 }
             }
@@ -73,7 +73,7 @@
         }
         .paynow{
             display:inline-block;
-            background:#f39;
+            background:#ab7505;
             border-radius:3px;
             padding: 2px 5px;
             color: #fff;
@@ -123,7 +123,7 @@
               min-width:200px;
             }
             &:last-child{
-              color:#f39;
+              color:#ab7505;
             }
           }
 
@@ -169,7 +169,7 @@
               }
               .btn_ptp{
                 outline: none;
-                background: url(../images/commont/jxs.png) no-repeat 15px 6px #f39;
+                background: url(../images/commont/jxs.png) no-repeat 15px 6px #ab7505;
                 padding: 0 25px 0 40px;
                 text-align: center;
                 font-size: 15px;
@@ -195,7 +195,7 @@
         margin:50px auto;
 
         .bt-1-new{
-          background:#f39;
+          background:#ab7505;
           padding:2px 10px;
           display: inline-block;
           color:#fff;
