--- a/app/design/frontend/pc/default/template/helpcenter/cancel-order.phtml
+++ b/app/design/frontend/pc/default/template/helpcenter/cancel-order.phtml
@@ -1,6 +1,6 @@
 <div class="help_right"><p><span style="font-size: medium;"><strong>Cancel Order</strong></span></p>
     <p>1.How to Cancel an Unpaid Order</p>
-    <p>If your payment for an order hasn't been made, you may cancel it by clicking "Cancel order" in your account on D-daydress.com.</p>
+    <p>If your payment for an order hasn't been made, you may cancel it by clicking "Cancel Order" in your account on islambridal.com.</p>
     <p>If your order is not paid within 40 days, it will be canceled automatically.</p>
     <p>2.How to Cancel a Paid Order</p>
     <p>We understand that ordering an item for your events is an important undertaking, and our cancellation policy was created with this in mind. However, it is important to note that our dresses are made to order. Once the tailoring process has begun, the materials cannot be reused.</p>
@@ -8,23 +8,21 @@
     <p>Our Cancellation Policy:</p>
     <p>For wedding dresses and special occasion dresses:</p>
     <p>a. Custom-made size:</p>
-    <p>- Orders cancelled within 12 hours after payment confirmation will be eligible for a full refund, or</p>
-    <p>- Orders cancelled 12 to 24 hours after payment confirmation will be eligible for a partial refund consisting of the full shipping cost and 50%</p>
-    <p>&nbsp; of the product purchase price, or</p>
-    <p>- Orders cancelled 24 to 48 hours after payment confirmation will be eligible for a partial refund consisting of the full shipping cost and 30%</p>
-    <p>&nbsp; of the product purchase price.</p>
-    <p>- Orders cancelled after 48 hours of payment confirmation will be eligible for a refund consisting of the full shipping cost only.</p>
-    <p>- Once your order has been shipped, it can no longer be cancelled.</p>
-    <p>&nbsp;</p>
+    <p>- Orders canceled within 12 hours after payment confirmation will be eligible for a full refund, or</p>
+    <p>- Orders canceled 12 to 24 hours after payment confirmation will be eligible for a partial refund consisting of the full shipping cost and 50%
+    of the product purchase price, or</p>
+    <p>- Orders canceled 24 to 48 hours after payment confirmation will be eligible for a partial refund consisting of the full shipping cost and 30%
+    of the product purchase price.</p>
+    <p>- Orders canceled after 48 hours of payment confirmation will be eligible for a refund consisting of the full shipping cost only.</p>
+    <p>- Once your order has been shipped, it can no longer be canceled.</p>
+
     <p>b. Standard size:</p>
-    <p>- Orders cancelled within 12 hours of payment confirmation will be eligible for a full refund, or</p>
-    <p>- Orders cancelled 12 to 24 hours after payment confirmation will be eligible for a partial refund consisting of the full shipping cost and 60%</p>
-    <p>&nbsp; of the product purchase price, or</p>
-    <p>- Orders cancelled 24 to 48 hours after payment confirmation will be eligible for a partial refund consisting of the full shipping cost and 40%</p>
-    <p>&nbsp; of the product purchase price.</p>
-    <p>- Orders cancelled after 48 hours of payment confirmation will be eligible for a refund consisting of the full shipping cost only.</p>
-    <p>- Once your order has been shipped, it can no longer be cancelled.</p>
-    <p>For clothes, bedding etc.</p>
-    <p>Orders canceled before shipment will get full refund.</p>
-    <p>For details, please submit your order number and contact our customer service staff.</p>
-    <p>&nbsp;</p></div>
+    <p>- Orders canceled within 12 hours of payment confirmation will be eligible for a full refund, or</p>
+    <p>- Orders canceled 12 to 24 hours after payment confirmation will be eligible for a partial refund consisting of the full shipping cost and 60%
+    of the product purchase price, or</p>
+    <p>- Orders canceled 24 to 48 hours after payment confirmation will be eligible for a partial refund consisting of the full shipping cost and 40%
+    of the product purchase price.</p>
+    <p>- Orders canceled after 48 hours of payment confirmation will be eligible for a refund consisting of the full shipping cost only.</p>
+    <p>- Once your order has been shipped, it can no longer be canceled.</p>
+    <p>For details, please submit your order number and contact our customer service staff at islambridal@aol.com.</p>
+</div>
