--- a/app/design/frontend/pc/default/template/helpcenter/faq.phtml
+++ b/app/design/frontend/pc/default/template/helpcenter/faq.phtml
@@ -1,13 +1,7 @@
 ﻿<div class="help_right"><p><span style="font-size: medium;"><strong>FAQ</strong></span></p>
-    <p>1. Will I be required to pay import duty?</p>
-    <p>Most of the countries do not charge import duty on low volume personal imports.</p>
-    <p>2.Can I get a dress with extra length?</p>
-    <p>We have our designers to make a dress with extra length for you. Please email or call us with style number, and we will find further information for you.</p>
-    <p>3.Which size to choose?</p>
-    <p>All of the dresses are available in standard size and custom size and most of them have minor alterations to get a perfect fit. We truly do hope to accommodate all shapes and sizes, but we strongly recommend you view our size chart prior to selecting your size to order.</p>
-    <p>4.How to preserve my dress?</p>
+    <p>1. How to preserve my dress?</p>
     <p>General attention</p>
-    <p>Dresses should be stored in a room where the temperature and humidity levels are constant, such as a guest room or spare closet. Never store your dress in the attic or basement where there are extreme changes in temperature and/or humidity. It is best to keep it in a dark (unexposed to sunlight), dry place, folded or rolled in a clean white sheet. Hanging your dress on a hanger is not recommended as it can cause stress to the fabric and create distortion. Do not store your dress in plastic such as a garment bag. Plastic can emit gases that will tend to yellow the fabric. If you decide to remove your dress from the one place to another place, we suggest that cotton gloves should always be worn when handling dresses.</p>
+    Dresses should be stored in a room where the temperature and humidity levels are constant, such as a guest room or spare closet. Never store your dress in the attic or basement where there are extreme changes in temperature and/or humidity. It is best to keep it in a dark (unexposed to sunlight), dry place, folded or rolled in a clean white sheet. Hanging your dress on a hanger is not recommended as it can cause stress to the fabric and create distortion. Do not store your dress in plastic such as a garment bag. Plastic can emit gases that will tend to yellow the fabric. If you decide to remove your dress from the one place to another place, we suggest that cotton gloves should always be worn when handling dresses.</p>
     <p>Yellowing</p>
     <p>It’s important to note that one of the leading causes of bridal dress yellowing is the plastic bags that many brides keep their dresses in. Most plastics give off damaging fumes that actually promote yellowing. But, even with proper care, some fabrics will yellow more than others and it may be impossible to prevent all yellowing.</p>
     <p>Generally, silk fabric yellows more than synthetic fabrics, such as polyester, rayon and acetate. However, nylon, which is a synthetic, has a tendency to yellow more than other synthetic fabrics. Dresses that can be wet cleaned have an advantage, in that if they do yellow, they may be able to be whitened for future use with a fabric whitener.</p>
@@ -20,23 +14,38 @@
     <p>An oxidation spot can occur when a substance that was not properly cleaned on the dress oxidizes and turns brown. This can happen even if your dress has been cleaned as dry-cleaning solvents do not remove all substances. Spills from clear soda or wine may go unnoticed at the time of the initial cleaning. Unless these spills are pretreated, it is likely they will oxidize over time. Inspecting preserved dresses periodically ensures the dress remains in the best condition. The sooner an oxidized stain is caught, the more likely it will be able to be removed.</p>
     <p>Light and dust</p>
     <p>Keeping your dress well covered will protect it from the damage caused by light and dust.</p>
-    <p>5.Can I see the dress in other colors and Fabric Swatches?</p>
-    <p>Unfortunately we are only allowed to send or post pictures provided to us by the manufacturers of the dresses we sell. Not all colors of the dresses are pictured by the manufacturers and therefore all the pictures you see are the only ones we have available. Only thing you can try to do is find another dress called the same color and it will be the same depending on the fabric.</p>
+
+    <p>2. Why can I no longer find the dress that I saw before?</p>
+    <p>When an item has no more available in stock and the manufacturer is no longer making it, it will be removed from our webpage and will no longer show up in searches.</p>
+
+    <p>3. Will I be required to pay import duty?</p>
+    <p>Most of the countries do not charge import duty on low volume personal imports.</p>
+
+    <p>4. How do I upgrade my shipping?</p>
+    <p>Simply respond to your confirmation email with the method you would like to change it to.</p>
+
+    <p>5. Can I get a dress with extra length?</p>
+    <p>We have our designers to make a dress with extra length for you. Please email or call us with style number, and we will find further information for you.</p>
+
+    <p>6. Which size to choose?</p>
+    <p>All of the dresses are available in standard size and custom size and most of them have minor alterations to get a perfect fit. We truly do hope to accommodate all shapes and sizes, but we strongly recommend you view our size chart prior to select your size.</p>
+
+    <p>Why is my order still processing?</p>
+    <p>Orders take 24-72 business hours to respond back with a shipping date.</p>
+
+    <p>Do you offer dress rent service?</p>
+    <p>Dear customer, all dresses are of high quality at cheap price. We recommend you to purchase on instead of renting one.</p>
+
+    <p>9. Can I see the dress in other colors and Fabric Swatches?</p>
+    <p>Unfortunately, we are only allowed to send or post pictures provided to us by the manufacturers of the dresses we sell. Not all colors of the dresses are pictured by the manufacturers and therefore all the pictures you see are the only ones we have available. Only thing you can try to do is find another dress called the same color and it will be the same depending on the fabric.</p>
     <p>Swatches for all fabrics are available directly to you through our online store, you can contact our customer service about how to order swatches.</p>
-    <p>&nbsp;</p>
-    <p>6.What if my dress is not available?</p>
-    <p>If your dress is not in stock and for some reason we cannot order it , we will notify you and give you other options to choose from, or you can cancel your order. You can provide other of your favorite dress style pictures, and after confirmation, we will reply you as soon as possible.</p>
-    <p>7.How do I use the search option of your site?</p>
-    <p>8.Is the information I send over the Internet safe?</p>
+
+    <p>10. What if I want a dress in unlisted color?</p>
+    <p>The colors that we list on the product detail page are the only colors which the dress is produced in. We also show all the pictures available, so the dress in unlisted color cannot be displayed if its picture is not shown.</p>
+
+    <p>11. Is the information I send over the Internet safe?</p>
     <p>All the information you send over our website is strictly confidential and is protected by our SSL certified web site through the industry's most powerful encryption VeriSign. Any other information given such as email is strictly confidential and will not be used or given to any 3rd party. Please see our Privacy Policy for more information.</p>
-    <p>9.Is this dress available and when will I receive it?</p>
-    <p>Inventory moves very quickly especially during prom season so we are not able to accurately check stock on a particular dress. We are not able to confirm shipping date until the order is placed for a dress. The website is updated with as much information as we have available including if a dress won't be shipping out until a later date.</p>
-    <p>10.Are you an online bridal store only?</p>
-    <p>Yes, all our business is done online, and we do not operate any retail bridal store.</p>
-    <p>11.How far in advance should I order a dress before wedding?</p>
-    <p>Please place your order at your earliest convenience. Normally, placing the order can't be less than 1 month in advance of your wedding ceremony. We also afford you a comfortable time frame to accommodate any alteration if necessary.</p>
-    <p>12.How do I place my order in this website?</p>
-    <p>You can view the catalog in our website. If you find anything you want to buy, please add it to your shopping cart and then go check out.</p>
-    <p>13.Will my dress exactly match the color on website?</p>
-    <p>Due to the computer monitor’s display settings, there might be a slight difference between the actual dress’ color and what you see on the picture. Slight color mismatches between the color of your dress and the color shown on screen may not mean that the dress is defective or mis-shipped.</p>
-    <p>&nbsp;</p></div>
+
+    <p>12. When should I order my wedding dress before wedding?</p>
+    <p>Please place your order at your earliest convenience. Normally, placing the order shoulder be more than 4 weeks in advance of your wedding ceremony. We also afford you a comfortable time frame to accommodate any alteration if necessary.</p>
+</div>
