--- a/app/design/frontend/pc/default/template/page/html/header.phtml
+++ b/app/design/frontend/pc/default/template/page/html/header.phtml
@@ -66,22 +66,20 @@
             </div>
         </div>
         <div class="header_content">
-            <div class="header_search">
-                <?php echo $this->getChildHtml('topSearch') ?>
-            </div>
             <div class="header_logo">
                 <?php if ($this->getIsHomePage()):?>
                     <h1 class="logo">
                         <a href="<?php echo $this->getUrl('') ?>" title="<?php echo $this->getLogoAlt() ?>" class="logo">
-                            <img src="<?php echo $this->getLogoSrc() ?>" alt="<?php echo $this->getLogoAlt() ?>" />
+                            <img src="<?php echo $this->getUrl('') ?>/skin/frontend/pc/default/images/logo.png" alt="<?php echo $this->getLogoAlt() ?>" />
                         </a>
                     </h1>
                 <?php else:?>
                     <a href="<?php echo $this->getUrl('') ?>" title="<?php echo $this->getLogoAlt() ?>" class="logo">
-                        <img src="<?php echo $this->getLogoSrc() ?>" alt="<?php echo $this->getLogoAlt() ?>" />
+                        <img src="<?php echo $this->getUrl('') ?>/skin/frontend/pc/default/images/logo.png" alt="<?php echo $this->getLogoAlt() ?>" />
                     </a>
                 <?php endif?>
             </div>
+            <div class="header_search"><?php echo $this->getChildHtml('topSearch') ?></div>
             <div class="header_cart">
                 <a href="<?php echo $this->getUrl('wishlist')?>" class="favor"><em>favor</em></a>
                 <?php echo $this->getChildHtml('top.cart') ?>
@@ -148,3 +146,32 @@
         </div>
     </div>
 </header>
+
+
+
+<?php /*倒计时广告**/ ?>
+<?php if($countdowns = Mage::getModel('ibanners/group')->loadByCode('header_countdown')->getBannerCollection()):?>
+    <?php foreach($countdowns as $cd){ $countdown = $cd;break;}?>
+    <?php if( strtotime($countdown->getAltText()) > time()  ):?>
+        <div class="header_countdown">
+            <div onclick="window.location.href='<?php echo $countdown->getUrl(); ?>'">
+                <?php
+                    $imag_src = $countdown->getImageUrl();
+                    if($imag_src){
+                        echo '<img src="'.$imag_src.'"/>';
+                    }
+                ?>
+                <span id="header_countdown" class="PositionAbsolute"></span>
+            </div>
+            <?php $date_time = strtotime($countdown->getAltText()); ?>
+            <script type="text/javascript">
+                jQuery(document).ready(function($){
+                    countdown('header_countdown', <?php echo date("Y",$date_time)?>, <?php echo date("m",$date_time)?>, <?php echo date("d",$date_time)?>, <?php echo date("H",$date_time)?>, <?php echo date("i",$date_time)?>, <?php echo date("s",$date_time)?>);
+                });
+            </script>
+        </div>
+    <?php endif;?>
+<?php endif; ?>
+
+
+
