--- a/skin/frontend/pc/default/scss/_category.scss
+++ b/skin/frontend/pc/default/scss/_category.scss
@@ -233,7 +233,7 @@
         }
 
         .on{
-            background-color:#F39;
+            background-color:#ab7505;
             color: #fff;
             font-weight: bold;
         }
@@ -252,7 +252,7 @@
                     border: 2px solid #e9e9e9;
                     border-radius:3px;
                     &:hover{
-                        border: 2px solid #f39;
+                        border: 2px solid #ab7505;
                     }
                 }
                 
@@ -284,7 +284,7 @@
                         color: #666;
                         font-weight: normal;
                         &:hover{
-                            color:#f39;
+                            color:#ab7505;
                         }
                     }
                 }
@@ -311,7 +311,7 @@
                         
                         .price{
                             font-size: 14px;
-                            color: #f39;
+                            color: #ab7505;
                             line-height: 18px;
                             height: 18px;
                             display: inline-block;
@@ -319,7 +319,7 @@
                     }
                     .minimal-price-link{
                         .label,.price{
-                            color:#f39;
+                            color:#ab7505;
                         }
                     }
                 }
@@ -449,5 +449,22 @@
 
 
 
-    
+    .last_review{
+      .review_row{
+        @include float_clear;
+        padding:20px 40px;
+        border-top:1px dashed #ccc;
+        &:first-child{border:0;}
+        .p_image{
+          float:left;width:10%;
+          img{width:100%;  max-width:120px;  }
+        }
+        .review_d{
+          float:right;width:90%;font-size:13px;
+          .review_info_1{font-weight:bold;padding-top:5px;}
+          .review_info_2{font-size:10px;line-height:30px;}
+          .review_info_3{line-height:15px;}
+        }
+      }
+    }
 }
