--- a/skin/frontend/pc/default/scss/_header.scss
+++ b/skin/frontend/pc/default/scss/_header.scss
@@ -108,7 +108,7 @@
           background-repeat:no-repeat;
         }
         a{
-          color:#f39;
+          color:#ab7505;
         }
       }
     }
@@ -120,27 +120,19 @@
     .header_search{
       float: left;
       height:$header_content_height;
-      width:33.33%;
+      width:40.33%;
 
       input{
-        background:url(../images/commont/icon_search.png) no-repeat;
-        background-position: 0px 5px;
-        width: 165px;
-        height: 32px;
-        line-height: 32px;
+        border:3px solid #000;
+        background:#fff;
+        width: 100%;
+        height: 48px;
+        line-height: 38px;
         outline: none;
         font-size: 12px;
         color: #888;
-        text-indent: 25px;
-        border:0;
-        border-bottom: 2px solid #e2e2e2;
-        margin:50px 0 0 65px;
-        padding:0;
-
-        &:focus{
-          background-position:0px -23px;
-          border-bottom: 2px solid #4d5152;
-        }
+        margin:50px 0 0 0;
+        padding:10px;
       }
     }
     .header_logo{
@@ -161,20 +153,22 @@
         height:100%;
 
         img{
-          max-height:100%;
+          max-height:$header_content_height;
+          max-width:100%;
         }
       }
     }
     .header_cart{
       float: left;
       height:$header_content_height;
-      width:33.33%;
-      padding:55px 0 0 15%;
+      width:26.33%;
+      padding:55px 20px 0 0 ;
+      text-align:right;
 
       a{
         display: inline-block;
         em{
-          text-indent: -9999px;
+          text-indent: 9999px;
           display:inline-block;
         }
       }
@@ -220,7 +214,7 @@
         }
         &:hover{
           &>a{
-            color:#f39;
+            color:#ab7505;
           }
         }
 
@@ -232,7 +226,7 @@
 
           &:hover{
             background-image:url(../images/commont/menu_li_hover_bg.png);
-            border-bottom:2px solid #f39;
+            border-bottom:2px solid #ab7505;
           }
         }
 
@@ -241,7 +235,7 @@
           left:0;
           top:43px;
           border: 1px solid #eee;
-          border-top-color: #f39;
+          border-top-color: #ab7505;
           background: white;
           z-index: 1000000005;
           display: none;
@@ -265,4 +259,44 @@
       }
     }
   }
+}
+
+
+
+.header_countdown{
+    width:100%;  position:relative;margin-bottom: 10px;
+
+    img{
+        max-width:100%;
+    }
+    .PositionAbsolute{
+      position:absolute;
+      top:50%;
+      right:0;
+      margin-top:-25px;
+      span{
+          float:left;width:46px;height:50px;color:#fff;text-align:center;font-size: 25px;position:relative;margin-right: 10px;
+          background:url(../images/commont/header_countdown.png) no-repeat;
+          &:after{
+            font-size: 12px;
+            position: absolute;
+            bottom: 2px;
+            width: 100%;
+            left: 0;
+          }
+          &.dday{
+            &:after{  content:"D";  }
+          }
+          &.text_day{  display:none;  }
+          &.dhour{
+            &:after{  content:"H";}
+          }
+          &.dmin{
+            &:after{  content:"M";}
+          }
+          &.dsec{
+            &:after{  content:"S";}
+          }
+      }
+    }
 }
