--- a/skin/frontend/pc/default/scss/_home.scss
+++ b/skin/frontend/pc/default/scss/_home.scss
@@ -272,7 +272,7 @@
 }
 
 .owl-theme .owl-dots .owl-dot.active span,.owl-theme .owl-dots .owl-dot:hover span {
-    background: #f39;
+    background: #ab7505;
 }
 
 .home_banners_1{
@@ -420,7 +420,7 @@
                 &>span , .price-box .special-price , .price-box .special-price .price{
                     float: left;
                     display: inline-block;
-                    color: #f39;
+                    color: #ab7505;
                     font-size: 14px;
                     height: 26px;
                     line-height: 26px;
@@ -555,4 +555,15 @@
 }
 .std{
     padding:10px;width:100%;
+
+  .home_page_title{color:#8c5433;border-bottom:1px solid #e9a179;text-align:center;font-size:20px;padding:10px 0;}
+  .home_page_tab{
+    margin-top:20px;
+    .w420{width:420px;}
+    p{
+      max-width:390px;margin:0 0 0 10px;color:#5c6063;
+      &:first-child{font-weight:bold;}
+      &:first-child + p{margin-bottom:10px;}
+    }
+  }
 }
