--- a/skin/frontend/pc/default/scss/styles.scss
+++ b/skin/frontend/pc/default/scss/styles.scss
@@ -11,7 +11,7 @@
     top: 0;
     left: 0;
     right: 0;
-    background:#4c5154;
+    background:#4d4c3a;
     width:100%;
     height:$top_height;
     z-index: -1;
